--- a/cube.html
+++ b/cube.html
@@ -10,7 +10,7 @@ $(document).ready(function(){
 
   let image_div = $('.cards');
 
-  for(let i = 0; i < 100; i++){
+  for(let i = 0; i < cube.length; i++){
     image_div.append(`<img src="${cube[i].image_url}" width="143" height="200"/>`)
   }
 });
